# dsb26-supervised-machine-learning

./: LICENSE  README.md  main.ipynb  pyproject.toml  technical_report.md
data/: data.csv
