[project]
name = "dsb26-supervised-machine-learning"
version = "0.1.0"
description = "Project on Supervised Machine Learning, part of module 6 of the 2026 Data Science Fundamentals bootcamp by Digital Talent for Chile - SENCE"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
